Archive2/10/bdb766e95e37f0/output
main.cpp: In constructor 'T::T(void*)':
main.cpp:3:18: error: anachronistic old-style base class initializer [-fpermissive]
     T(void* x) : (x) {}
                  ^
main.cpp:3:16: error: unnamed initializer for 'T', which has no base classes
     T(void* x) : (x) {}
                ^
